--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
     "allowSyntheticDefaultImports": true,
     "noImplicitAny": true,
     "module": "esnext",
-    "target": "ESNext",
+    "target": "es2020",
     "moduleResolution": "node",
     "skipLibCheck": true,
     "jsx": "react-jsx",
@@ -18,8 +18,9 @@
     "transpileOnly": true,
     "files": true,
     "compilerOptions": {
-      "module": "CommonJS"
+      "module": "esnext",
+      "target": "es2020"
     }
   },
-  "include": ["**/*.ts", "**/*.tsx"]
+  "include": ["**/*.ts", "**/*.tsx", "webpack.config.js", "webpack.common.config.js", "webpack.lib.config.js"]
 }
