--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "bundle",
   "scripts": {
-    "dev": "cross-env NODE_ENV=development webpack serve --config webpack.config.js",
+    "dev": "cross-env NODE_ENV=development webpack serve --config webpack.config.cjs",
     "dev:ift": "cross-env NODE_ENV=development MODE=ift webpack serve",
     "dev:stub": "cross-env NODE_ENV=development MODE=stub webpack serve",
     "build": "npm run build:app && npm run build:lib",
     "build:app": "cross-env NODE_ENV=production webpack",
-    "build:lib": "cross-env NODE_ENV=production webpack -c webpack.lib.config.ts",
+    "build:lib": "cross-env NODE_ENV=production webpack -c webpack.lib.config.cjs",
     "preview": "static dist/lib -H \"{\\\"Access-Control-Allow-Origin\\\": \\\"*\\\"}\"",
     "lint": "npx eslint . ",
     "lint:fix": "eslint . --ext js,jsx --fix",
